@@ -1196,9 +1196,9 @@ class Parser
 
 			$text = $wgContLang->markNoConversion($text);
 
-			# Replace &amp; from obsolete syntax with &.
-			# All HTML entities will be escaped by makeExternalLink()
-			$url = str_replace( '&amp;', '&', $url );
+			# Normalize any HTML entities in input. They will be
+			# re-escaped by makeExternalLink().
+			$url = Sanitizer::decodeCharReferences( $url );
 
 			# Process the trail (i.e. everything after this link up until start of the next link),
 			# replacing any non-bracketed links
@@ -1279,10 +1279,9 @@ class Parser
 					$url = substr( $url, 0, -$numSepChars );
 				}
 
-				# Replace &amp; from obsolete syntax with &.
-				# All HTML entities will be escaped by makeExternalLink()
-				# or maybeMakeExternalImage()
-				$url = str_replace( '&amp;', '&', $url );
+				# Normalize any HTML entities in input. They will be
+				# re-escaped by makeExternalLink() or maybeMakeExternalImage()
+				$url = Sanitizer::decodeCharReferences( $url );
 
 				# Is this an external image?
 				$text = $this->maybeMakeExternalImage( $url );
